# zephyr-course

./: .gitignore  README.md  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/: osd32mp1_brk.overlay
app/boards/my_better_board/: CMakeLists.txt  Kconfig.defconfig  Kconfig.my_better_board  board.c  board.yml  my_better_board.dts  my_better_board.yaml
app/boards/my_little_board/: Kconfig.defconfig  Kconfig.my_little_board  board.yml  my_little_board.dts  my_little_board.yaml
app/src/: main.cpp
